--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -33,4 +33,7 @@
 @import '_blocks/characteristics';
 @import '_blocks/category';
 @import '_blocks/pagination';
-
+@import '_blocks/cart';
+@import '_blocks/cart-products';
+@import '_blocks/qty';
+@import '_blocks/catalog';
