--- a/source/scss/_blocks/_banner.scss
+++ b/source/scss/_blocks/_banner.scss
@@ -83,6 +83,18 @@
   &__text {
     font-size: calc(100vw * (20 / 1920));
     line-height: 1.2;
+
+    @include xl {
+      font-size: calc(100vw * (20 / $xl));
+    }
+
+    @include lg {
+      font-size: calc(100vw * (18 / $lg));
+    }
+
+    @include sm {
+      font-size: calc(100vw * (15 / $sm));
+    }
   }
 
   &__control {
