--- a/source/scss/_blocks/_catalog-sc.scss
+++ b/source/scss/_blocks/_catalog-sc.scss
@@ -17,7 +17,7 @@
   }
 
   @include xs {
-    padding: 0 calc(100vw * (15 / $xs-base));
+    padding: calc(100vw * (25 / $xs-base))  calc(100vw * (15 / $xs-base)) 0;
     background-image: none;
   }
 
