--- a/source/scss/_blocks/_characteristics.scss
+++ b/source/scss/_blocks/_characteristics.scss
@@ -30,7 +30,7 @@
     transition: box-shadow 0.3s ease;
 
     &:hover {
-      box-shadow: 0 4px 10px 10px rgba(0,0,0,.25);
+      box-shadow: 0 0px 5px 5px rgba(0,0,0,.05);
     }
 
     @include xl {
@@ -61,12 +61,13 @@
       height: auto;
       padding-bottom: calc(100vw * (15 / $xs-base));
       padding-inline: 0;
-      margin-bottom: calc(100vw * (15 / $xs-base));
+      // margin-bottom: calc(100vw * (15 / $xs-base));
       border-bottom: 1px solid #d0d0d0;
       display: inline;
 
       &:last-child {
-        margin-bottom: 0;
+        border-bottom: none;
+        padding-bottom: 0;
       }
     }
   }
