--- a/source/scss/_blocks/_delivery-sc.scss
+++ b/source/scss/_blocks/_delivery-sc.scss
@@ -2,7 +2,8 @@
   color: $gray;
   padding: calc(100vw * (100 / 1920)) calc(100vw * (100 / 1920)) calc(100vw * (50 / 1920));
   background-color: $white;
-  box-shadow: 0 4px 10px 10px rgba(0,0,0,.25);
+  box-shadow: 0 0px 10px 2px rgba(0,0,0,.1);
+  z-index: 1;
 
   @include xl {
     padding: calc(100vw * (100 / $xl)) calc(100vw * (100 / $xl)) calc(100vw * (50 / $xl));
