--- a/source/scss/_blocks/_pagination.scss
+++ b/source/scss/_blocks/_pagination.scss
@@ -33,6 +33,7 @@
     justify-content: center;
     flex-shrink: 0;
     cursor: pointer;
+    transition: 0.25s ease;
 
     &--prev,
     &--next {
