--- a/source/scss/_defs/_global.scss
+++ b/source/scss/_defs/_global.scss
@@ -19,7 +19,7 @@ body {
   font-style: normal;
   font-weight: 400;
   color: $black;
-  background-color: $white;
+  background-color: #f9f9f9;
   overflow-x: hidden;
 
   &.modal_open {
