--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -13,6 +13,7 @@
 
 
 @import '_blocks/header';
+@import '_blocks/breadcrumbs';
 @import '_blocks/catalog-select';
 @import '_blocks/main-nav';
 @import '_blocks/banner';
