--- a/source/scss/_blocks/_faq.scss
+++ b/source/scss/_blocks/_faq.scss
@@ -102,6 +102,10 @@
       &::after {
         transform: rotate(180deg);
       }
+
+      @include xs {
+      color: $white;
+      }
     }
   }
 
