--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -28,6 +28,7 @@
 @import '_blocks/callback';
 @import '_blocks/quote';
 @import '_blocks/footer';
+@import '_blocks/product';
 @import '_blocks/product-top';
 @import '_blocks/product-info';
 @import '_blocks/equipment';
