--- a/source/scss/_blocks/_card.scss
+++ b/source/scss/_blocks/_card.scss
@@ -1,6 +1,7 @@
 .card {
   width: calc(100vw * (416 / 1920));
   padding: calc(100vw * (20 / 1920)) calc(100vw * (40 / 1920));
+  background-color: $white;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -58,6 +59,12 @@
     object-fit: contain;
     margin-bottom: calc(100vw * (10 / 1920));
 
+    > img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+
     @include xl {
       margin-bottom: calc(100vw * (10 / $xl));
     }
@@ -75,7 +82,7 @@
     }
   }
 
-  &__name {
+  &__category {
     font-size: calc(100vw * (30 / 1920));
     line-height: 1;
     color: $gray;
@@ -97,7 +104,7 @@
     }
   }
 
-  &__desc {
+  &__name {
     font-size: calc(100vw * (24 / 1920));
     line-height: 1.125;
     text-align: left;
