--- a/source/scss/_blocks/_reviews.scss
+++ b/source/scss/_blocks/_reviews.scss
@@ -114,7 +114,7 @@
     border-radius: 50%;
     display: block;
     background: $special url('../img/reviews_chevron.png') no-repeat center;
-    background-size: auto;
+    background-size: auto 80%;
 
     &--next {
       transform: rotate(180deg);
@@ -134,6 +134,10 @@
 
     @include sm {
       width: calc(100vw * (32 / $sm));
+    }
+
+    @include xs {
+      width: calc(100vw * (30 / $xs-base));
     }
   }
 
