--- a/source/scss/_blocks/_header.scss
+++ b/source/scss/_blocks/_header.scss
@@ -75,6 +75,26 @@
   &__search {
     margin-inline: calc(100vw * (40 / 1920));
     position: relative;
+    display: flex;
+    align-items: center;
+
+    &.open {
+      .header__search-btn {
+        background-image: url('../img/cross.png');
+      }
+
+      .header__search-input {
+        @include sm {
+          width: calc(100vw * (256 / $sm));
+          padding-inline: calc(100vw * (7 / $sm));
+        }
+
+        @include xs {
+          width: calc(100vw * (240 / $xs-base));
+          padding-inline: calc(100vw * (7 / $xs-base));
+        }
+      }
+    }
 
     @include xl {
       margin-inline: calc(100vw * (20 / $xl)) calc(100vw * (40 / $xl));
@@ -123,35 +143,31 @@
 
     @include sm {
       font-size: calc(100vw * (15 / $sm));
-      background-position: center right calc(100vw * (10 / $xs-base));
-      background-size: calc(100vw * (25 / $xs-base)) auto;
-      width: calc(100vw * (256 / $sm));
+      background-position: center right calc(100vw * (10 / $sm));
+      background-size: calc(100vw * (25 / $sm)) auto;
+      width: 0;
       height: calc(100vw * (30 / $sm));
-      padding-inline: calc(100vw * (7 / $sm));
+      padding: 0;
       position: absolute;
-      top: 0;
-      right: 100%;
-      display: none;
+      top: 50%;
+      right: 150%;
+      transform: translateY(-50%);
+      transition: all 0.3s ease;
     }
 
     @include xs {
       font-size: calc(100vw * (20 / $xs-base));
       background-position: center right calc(100vw * (10 / $xs-base));
       background-size: calc(100vw * (27 / $xs-base)) auto;
-      width: calc(100vw * (234 / $xs-base));
       height: calc(100vw * (40 / $xs-base));
-      padding-inline: calc(100vw * (7 / $xs-base));
     }
   }
 
   &__search-btn {
     width: calc(100vw * (25 / $sm));
     height: calc(100vw * (25 / $sm));
-
-    > img {
-      width: 100%;
-      height: auto;
-    }
+    background: transparent url('../img/search_white.png') no-repeat center;
+    background-size: 100% auto;
 
     @include xs {
       width: calc(100vw * (25 / $xs-base));
@@ -163,6 +179,8 @@
     width: calc(100vw * (34 / 1920));
     height: calc(100vw * (32 / 1920));
     position: relative;
+    display: flex;
+    align-items: center;
 
     > img {
       width: 100%;
@@ -201,28 +219,24 @@
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(50%, -35%);
+    transform: translate(50%, -50%);
     display: grid;
     place-content: center;
 
     @include xl {
       font-size: calc(100vw * (14 / $xl));
-    transform: translate(50%, -30%);
     }
 
     @include lg {
       font-size: calc(100vw * (14 / $lg));
-    transform: translate(50%, -20%);
     }
 
     @include sm {
       font-size: calc(100vw * (10 / $sm));
-    transform: translate(50%, -10%);
     }
 
     @include xs {
       font-size: calc(100vw * (10 / $xs-base));
-    transform: translate(50%, 0);
     }
   }
 }
