--- a/source/scss/_blocks/_category.scss
+++ b/source/scss/_blocks/_category.scss
@@ -115,7 +115,9 @@
     text-align: justify;
     margin-top: calc(100vw * (65 / 1920));
 
-    > p + p{
+    > p + p {
+      margin-top: calc(100vw * (20 / $xl));
+
       @include xl {
         margin-top: calc(100vw * (20 / $xl));
       }
