--- a/source/scss/_blocks/_cart-products.scss
+++ b/source/scss/_blocks/_cart-products.scss
@@ -17,6 +17,20 @@
   @include xs {
     gap: calc(100vw * (15 / $xs-base));
   }
+
+  &__item {
+    @include lg {
+      padding-bottom: calc(100vw * (10 / $lg));
+    }
+
+    @include sm {
+      padding-bottom: calc(100vw * (10 / $sm));
+    }
+
+    @include xs {
+      padding-bottom: calc(100vw * (10 / $xs-base));
+    }
+  }
   
   &__img {
     width: calc(100vw * (90 / 1920));
