--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,6 +3,7 @@
     src: url('../fonts/futura-bt-for-dyson-w05-medium.woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @import '_defs/vars';
