--- a/source/scss/_blocks/_catalog-sc.scss
+++ b/source/scss/_blocks/_catalog-sc.scss
@@ -1,7 +1,7 @@
 .catalog-sc {
   color: $primary;
   padding: calc(100vw * (100 / 1920)) calc(100vw * (100 / 1920)) calc(100vw * (50 / 1920));
-  background: $black url('../img/catalog-sc_bg.png') no-repeat bottom center;
+  background: $black url('../img/catalog-sc_bg.webp') no-repeat bottom center;
   background-size: 100% auto;
 
   @include xl {
