--- a/source/scss/_blocks/_header.scss
+++ b/source/scss/_blocks/_header.scss
@@ -2,7 +2,9 @@
   color: $white;
   background-color: $black;
   box-shadow: 0 4px 5px 3px rgba(0,0,0,.25);
-
+  position: relative;
+  z-index: 1;
+  
   &__logo {
     width: calc(100vw * (159 / 1920));
     height: calc(100vw * (87 / 1920));
